--- a/03_fabrication/index.html
+++ b/03_fabrication/index.html
@@ -128,7 +128,7 @@ video on the right.</p>
   </div>
 </div>
 
-<h4>learnings & challenges</h4>
+<h4>reflection</h4>
 <ul>
   <li>
     the motor had many different protruding parts => print multiple iterations
