--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -22,12 +22,12 @@
   <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>week 5: 3D Design & Printing</h3>
+<h3>week 5: 3D design & printing</h3>
 
 <h4>assignment: model and 3D print something</h4>
 
 <div class="center-row">
-  <img src="all_fabric.png" alt="All fabric samples" style="width:70%; margin:20px 0;">
+  <img src="all_fabric.png" alt="All fabric samples" style="width:60%; margin:20px 0;">
 </div>
 <p class="caption">different infill patterns</p>
 
@@ -44,17 +44,21 @@ fully connected so it wouldn't have made good fabric.
 
 <div class="flexrow">
   <div style="width:45%; margin:10px;">
-    <img src="fail_print.png" alt="Failed 3D print attempt" style="width:100%; margin-bottom:10px;">
+    <div style="height:400px; overflow:hidden;">
+      <img src="fail_print.png" alt="Failed 3D print attempt" style="width:100%; height:100%; object-fit:cover; margin-bottom:10px;">
+    </div>
     <p class="caption">failed print - too thin</p>
   </div>
   <div style="width:45%; margin:10px;">
-    <img src="fail_fabric.png" alt="Failed fabric pattern" style="width:100%; margin-bottom:10px;">
-    <p class="caption"> hilbert curve fabric pattern</p>
+    <div style="height:400px; overflow:hidden;">
+      <img src="fail_fabric.png" alt="Failed fabric pattern" style="width:100%; height:100%; object-fit:cover; margin-bottom:10px;">
+    </div>
+    <p class="caption">hilbert curve fabric pattern</p>
   </div>
 </div>
 
 <div class="flexrow">
-  <a class="btn-download" href="fabric_pattern.stl" download>download 3D fabric pattern (stl)</a>
+  <a class="btn-download" href="fabric.stl" download>download 3D fabric pattern (stl)</a>
 </div>
 <p class="margin">   </p>
 
@@ -65,12 +69,12 @@ infill patterns to see which one i like the most when flexible filament is used.
 <p>i also experimented with 3D scanning using the revopoint scanner. i scanned my face but wasn't able to capture my hair.</p>
 
 <div class="center-row">
-  <img src="scan.png" alt="3D scan" style="width:70%; margin:20px 0;">
+  <img src="scan.png" alt="3D scan" style="width:60%; margin:20px 0;">
 </div>
 <p class="caption">3D scan</p>
 
 <div class="flexrow">
-  <a class="btn-download" href="scan.stl" download>download 3D scan (stl)</a>
+  <a class="btn-download" href="scan.ply" download>download 3D scan (ply)</a>
 </div>
 <p class="margin">   </p>
 
