--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -35,18 +35,18 @@
       </div>
       <div style="width:45%; margin:10px;">
         <img src="dress_top.png" alt="3D printed top design" style="width:100%; margin-bottom:10px;">
-        <p class="caption">3D printed top design</p>
+        <p class="caption">top design</p>
       </div>
     </div>
 
     <div class="flexrow">
       <div style="width:45%; margin:10px;">
         <img src="dress_skirt.png" alt="Skirt design" style="width:100%; margin-bottom:10px;">
-        <p class="caption">skirt design with attachment points</p>
+        <p class="caption">skirt design</p>
       </div>
       <div style="width:45%; margin:10px;">
         <img src="dress_petal.png" alt="Petal mechanism" style="width:100%; margin-bottom:10px;">
-        <p class="caption">petal mechanism with servo motors</p>
+        <p class="caption">petal design</p>
       </div>
     </div>
 
@@ -76,51 +76,28 @@
     the electronics to work properly, i will use a different material to make the dress more sturdy.</p>
 
     <h5>development schedule:</h5>
-    <div class="code-block">
-week 10/9-10/16:
-- attach servo motors and petals
-- print 3d printed fabric for the top
-
-week 10/16-10/23:
-- have working petals and initial 3d printed top 
-- finish MVP0
-
-week 10/23-10/30:
-- create inner lining 
-
-week 10/30-11/6:
-- sew inner liner of top
-
-week 11/6-11/13:
-- sew skirt
-
-week 11/13-11/20:
-- refine petal materials
-
-week 11/20-11/27:
-- integrate electronics into the dress
-
-week 11/27-12/4:
-- final assembly
-- testing and refinement
-
-week 12/4-12/10:
-- finished product!
-    </div>
+    <ul class="timeline">
+      <li>week 10/9-10/16: attach servo motors and petals, print 3d printed fabric for the top</li>
+      <li>week 10/16-10/23: have working petals and initial 3d printed top, finish MVP0</li>
+      <li>week 10/23-10/30: create inner lining</li>
+      <li>week 10/30-11/6: sew inner liner of top</li>
+      <li>week 11/6-11/13: sew skirt</li>
+      <li>week 11/13-11/20: refine petal materials</li>
+      <li>week 11/20-11/27: integrate electronics into the dress</li>
+      <li>week 11/27-12/4: final assembly, testing and refinement</li>
+      <li>week 12/4-12/10: finished product!</li>
+    </ul>
 
     <h4>bill of materials</h4>
-    <div class="code-block">
-- ESP32 microcontroller (x1)
-- Servo motors (x8-12)
-- PLA filament for prototyping
-- TPU flexible filament for final dress components
-- Fabric for skirt base
-- Conductive thread
-- Battery pack
-- Wires and connectors
-- Laser-cut acrylic for petal mechanisms
-- Cardboard for prototyping
-    </div>
+    <ul class="materials">
+      <li>ESP32 microcontroller</li>
+      <li>servo motors</li>
+      <li>TPU flexible filament for final top outer fabric</li>
+      <li>cotton and mesh fabric for skirt base</li>
+      <li>batteries</li>
+      <li>laser-cut acrylic/wood for petal mechanisms</li>
+      <li>cardboard for prototyping</li>
+    </ul>
     
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
