more images, styling

--- a/05_3Ddesign/index.html
+++ b/05_3Ddesign/index.html
@@ -65,6 +65,11 @@ fully connected so it wouldn't have made good fabric.
 <p>out of these i liked the stars pattern the best, but i will continue playing around with the different 
 infill patterns to see which one i like the most when flexible filament is used.</p>
 
+<div class="center-row">
+  <img src="fabric.png" alt="3D printed fabric sample" style="width:60%; margin:20px 0;">
+</div>
+<p class="caption">3D printed fabric sample in fusion</p>
+
 <h4>3D scanning</h4>
 <p>i also experimented with 3D scanning using the revopoint scanner. i scanned my face but wasn't able to capture my hair.</p>
 
