--- a/13_finalproject/index.html
+++ b/13_finalproject/index.html
@@ -64,10 +64,20 @@
       </div>
     </div>
 
-    <div class="center-row">
-      <img src="initial_belt.png" alt="Initial belt design" style="width:70%; margin:20px 0;">
+    <div class="flexrow">
+      <div style="width:45%; margin:10px;">
+        <div style="height:300px; overflow:hidden;">
+          <img src="initial_belt.png" alt="Initial belt design" style="width:100%; height:100%; object-fit:cover; margin-bottom:10px;">
+        </div>
+        <p class="caption">initial cardboard belt design</p>
+      </div>
+      <div style="width:45%; margin:10px;">
+        <div style="height:300px; overflow:hidden;">
+          <img src="belt.png" alt="Updated belt design" style="width:100%; height:100%; object-fit:cover; margin-bottom:10px;">
+        </div>
+        <p class="caption">fusion belt design</p>
+      </div>
     </div>
-    <p class="caption">initial belt design with motor placement</p>
 
     <h4>development plan</h4>
     <p>for MVP0, i'm aiming to get an initial iteration of the petals on the skirt as well as the 3d printed top done. i
@@ -79,9 +89,9 @@
     <ul class="timeline">
       <li>week 10/9-10/16: attach servo motors and petals, print 3d printed fabric for the top</li>
       <li>week 10/16-10/23: have working petals and initial 3d printed top, finish MVP0</li>
-      <li>week 10/23-10/30: create inner lining</li>
-      <li>week 10/30-11/6: sew inner liner of top</li>
-      <li>week 11/6-11/13: sew skirt</li>
+      <li>week 10/23-10/30: sew inner lining for the top</li>
+      <li>week 10/30-11/6: sew inner liner of the skirt</li>
+      <li>week 11/6-11/13: sew outside layers of the skirt</li>
       <li>week 11/13-11/20: refine petal materials</li>
       <li>week 11/20-11/27: integrate electronics into the dress</li>
       <li>week 11/27-12/4: final assembly, testing and refinement</li>
