--- a/08_cnc/index.html
+++ b/08_cnc/index.html
@@ -24,9 +24,46 @@
 <div class="textcontainer">
 <p class="margin">   </p>
 
-<h3>Week 8: CNC Milling</h3>
+<h3>week 8: cnc milling</h3>
 
-<h4>Assignment: Make Something With CNC</h4>
+<h4>assignment: make something with cnc</h4>
+
+<p>
+  for this week, sophia and i decided to create a heart-shaped jewelry box using the cnc milling machine. 
+  first, we designed it within fusion 360 and then cut it out of wood. after that was done, we used sand paper 
+  to smooth out the edges. we also thought it would be cool to create some sort of mold in this shape so 
+  we vacuum sealed it to create a plastic mold. we could add chocolate or resin into this later on. 
+</p>
+
+<div class="row">
+  <div class="col-md-6">
+    <figure class="figure">
+      <img src="presand.jpg" class="figure-img img-fluid rounded" alt="before sanding">
+      <figcaption class="figure-caption text-center">before sanding</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-6">
+    <figure class="figure">
+      <img src="sand.jpg" class="figure-img img-fluid rounded" alt="after sanding">
+      <figcaption class="figure-caption text-center">after sanding</figcaption>
+    </figure>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <figure class="figure">
+      <img src="vacuum.jpg" class="figure-img img-fluid rounded" alt="vacuum sealing process">
+      <figcaption class="figure-caption text-center">vacuum sealing process</figcaption>
+    </figure>
+  </div>
+  <div class="col-md-6">
+    <figure class="figure">
+      <img src="final.jpg" class="figure-img img-fluid rounded" alt="final product">
+      <figcaption class="figure-caption text-center">final product</figcaption>
+    </figure>
+  </div>
+</div>
 
 </div>
 </xmp>
